--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     </head>
 
     <body>
-        <h1>HELLO WORLD!
-            <p>It's amazing</p>
-        </h1>
+        <h1>HELLO WORLD!</h1>
+        <p>It's amazing</p>
     </body>
 </html>
